# EventBooking

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
DummyData/: affiliation.json  amenity_category.json  casual.json  city.json  competitive.json  event.json  user.json
event_booking/: asgi.py  settings.py  urls.py
event_booking/event_booking/: settings.py  urls.py  wsgi.py
init_scripts/: Generate_sample_data.sql  database_init.sql
reservation/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
reservation/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_date_joined_user_groups_user_is_active_and_more.py
reservation/templates/reservation/: create-team.html  create_event.html  home.html  join-event.html  join-team.html  login_register.html  profile.html  search-events.html  stats.html  update-user.html
templates/: main.html  navbar.html
